--- a/style.css
+++ b/style.css
@@ -10,6 +10,129 @@ body {
     line-height: 1.5;
 }
 
+
+
+
+
+
+
+
+
+.circle-carousel {
+  width: 100vw;
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background: #111; */
+  overflow: hidden;
+  position: relative;
+}
+
+.carousel-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  max-width: 100vw;
+  perspective: 1000px;
+  overflow: hidden;
+}
+
+/* Image base */
+.carousel-image {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.6s ease;
+  cursor: pointer;
+  width: 220px;
+  height: 300px;
+  border-radius: 10px;
+  overflow: hidden;
+  /* box-shadow: 0 20px 40px rgba(0,0,0,0.4); */
+   transition: all 1.2s ease-in-out;
+}
+
+.carousel-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+/* Positioning */
+.carousel-image.left {
+  left: 0%;
+  top: 55%;
+  transform: translateY(-30%) scale(0.85) rotateY(25deg);
+  z-index: 1;
+}
+
+.carousel-image.center {
+  left: 50%;
+  top: 35%;
+  transform: translate(-50%, -60%) scale(1.15);
+  z-index: 3;
+}
+
+.carousel-image.right {
+  right: 0%;
+  top: 55%;
+  transform: translateY(-30%) scale(0.85) rotateY(-25deg);
+  z-index: 1;
+}
+
+
+@media (max-width: 768px) {
+  .carousel-image {
+    width: 120px;
+    height: 180px;
+  }
+
+  .carousel-image.left {
+    left: 2%;
+    top: 50%;
+    transform: translateY(-30%) scale(0.75) rotateY(15deg);
+  }
+
+  .carousel-image.center {
+    left: 50%;
+    top: 30%;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  .carousel-image.right {
+    right: 2%;
+    top: 50%;
+    transform: translateY(-30%) scale(0.75) rotateY(-15deg);
+  }
+  
+    .circle-carousel {
+    height: 45vh; /* or adjust to 50vh if needed */
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ------------navv patt ----------*/
 
 .nav_bar {
